better collision when jumping, added mobile control, fix responsive problems

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,10 @@
 }
 
 body{
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden !important;
+
     font-family: 'comic',Arial, Helvetica, sans-serif;
 
     display: flex;
@@ -11,10 +15,12 @@ body{
     align-items: center;
     justify-content: center;
 
-    background: url('../img/5_background/second_half_background.png') no-repeat center center fixed;
+    background: url('../img/5_background/second_half_background.png');
+    background-repeat: no-repeat;
     background-size: cover;
 
-    overflow: hidden !important;
+    height: 100vh;
+    width: 100%;
 }
 
 .start-wrapper{
@@ -27,6 +33,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 95%;
+    height: 95%;
 }
 
 .start{
@@ -35,8 +43,6 @@ body{
     align-items: center;
     justify-content: flex-start;
     overflow: hidden !important;
-    height: 480px;
-    width: 720px;
     z-index: 999;
 }
 
@@ -52,19 +58,14 @@ body{
 
 .control-img{
     margin-top: 24px;
-    max-width: 100%;
+    max-width: 720px;
     height: auto;
 }
 
-.btn-wrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    position: absolute;
+.story-btn{
+    position: relative;
+    top:64px;
     left:16px;
-    top:16px;
 }
 
 .btn{
@@ -122,16 +123,11 @@ body{
     transition: all 0.3s ease-in-out;
 }
 
-/*fallback*/
-canvas {
-    background-color: bisque;
-    display: block;
-}
-
 .fullscreen{
     width: 100vw;
     height: 100vh;
 }
+
 #fullscreen{
     position: absolute;
     top: 50%;
@@ -148,8 +144,8 @@ canvas {
 }
 
 .modal{
-    width: 960px;
-    height: 720px;
+    width: 720px;
+    height: 480px;
     background-color: tomato;
     color:black;
     z-index: 9999;
@@ -243,13 +239,17 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: url('../img/10_sonstiges/bg_blur.jpg') no-repeat center bottom;
+    background: url('../img/10_sonstiges/landscape.jpg') no-repeat center bottom;
+    background-size: cover;
 }
 
 .landscape{
     width: 100%;
     height:auto;
-    transform: rotate(90deg);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .hide-landscape{
@@ -257,13 +257,8 @@ canvas {
 }
 
 #mobileControl{
-    width:90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 16px;
+    display:none;
+    opacity: 0.7;
 }
 
 .gap{
@@ -280,6 +275,15 @@ canvas {
 @media only screen and (max-width: 720px) {
    canvas{
         width: 100vw;
+   }
+   #mobileControl{
+        width:90%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        position: absolute;
+        bottom: 16px;
    }
    .start-screen {
         max-width: 100%;
@@ -300,12 +304,12 @@ canvas {
         display: none;
     }
     .game-btn{
-        margin-top: 0;
+        margin: 0;
         position: absolute;
-        top:16px;
-        width: 150px;
+        top:48px;
+        width: 120px;
         height: auto;
-        font-size: 16pt;
+        font-size: 14pt;
         z-index: 9999;
     }
     .btn{
@@ -328,6 +332,11 @@ canvas {
     .audio-off, .audio-on, .disable-fs, .activate-fs{
         width: 24px !important;
         height: 24px !important;
+    }
+    .story-btn{
+        position: relative;
+        top:44px;
+        left:8px;
     }
 }
 
